[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MotoBug.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/NiseSonic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/main/green_hill_zone.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="World" parent="." instance=ExtResource( 1 )]
position = Vector2( 11, -31 )

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 2 )]
position = Vector2( -150, 135 )

[node name="MotoBug" parent="." instance=ExtResource( 3 )]
position = Vector2( 1773, -83 )
scale = Vector2( 2, 2 )

[node name="MotoBug2" parent="." instance=ExtResource( 3 )]
position = Vector2( 5962, 290 )
scale = Vector2( 2, 2 )

[node name="MotoBug3" parent="." instance=ExtResource( 3 )]
position = Vector2( 15972, -401 )
scale = Vector2( 2, 2 )

[node name="MotoBug4" parent="." instance=ExtResource( 3 )]
position = Vector2( 16650, -1842 )
scale = Vector2( 2, 2 )

[node name="MotoBug5" parent="." instance=ExtResource( 3 )]
position = Vector2( 18332, -1269 )
scale = Vector2( 2, 2 )

[node name="MotoBug6" parent="." instance=ExtResource( 3 )]
position = Vector2( 20783, -2162 )
scale = Vector2( 2, 2 )

[node name="MotoBug7" parent="." instance=ExtResource( 3 )]
position = Vector2( 24584, -2034 )
scale = Vector2( 2, 2 )

[node name="MotoBug8" parent="." instance=ExtResource( 3 )]
position = Vector2( 25373, -2032 )
scale = Vector2( 2, 2 )

[node name="MotoBug9" parent="." instance=ExtResource( 3 )]
position = Vector2( 26036, -2034 )
scale = Vector2( 2, 2 )

[node name="MotoBug10" parent="." instance=ExtResource( 3 )]
position = Vector2( 28034, -1331 )
scale = Vector2( 2, 2 )

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 329.0
margin_top = -184.0
margin_right = 705.0
margin_bottom = -135.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"

[node name="GameWonLabel" type="Label" parent="."]
visible = false
margin_left = 28.0
margin_top = -179.0
margin_right = 407.0
margin_bottom = -130.0
custom_fonts/font = SubResource( 2 )
text = "SONIC WON!"

[node name="GameWonTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Songs" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
autoplay = true
max_distance = 100000.0

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="GameWonTimer" to="." method="_on_GameWonTimer_timeout"]
